Users now associated with questions and replies. lecture.html forms styled

--- a/static/css/lecture.css
+++ b/static/css/lecture.css
@@ -24,3 +24,13 @@
     color: white;
     font-size: 12pt;
 }
+
+.writereply{
+    color: black;
+    font-size: 16pt;
+}
+
+.qhelptext{
+    color: black;
+    font-size: 20pt;
+}
