--- a/static/css/lecture.css
+++ b/static/css/lecture.css
@@ -2,26 +2,29 @@
 .hidden{ display:none;}
 
 /* Color for lecturer replies */
-.lightgray{background-color: gainsboro;}
+.lightgray{
+/*background-color: lightgray;*/
+background-color: rgba(240, 240, 240, 0.9);
+}
 
 /* force white text */
 .lecturetitle{
-    color: white;
+    color: black;
     font-size: 32pt;
 }
 
 .questiontitle{
-    color: white;
+    color: black;
     font-size: 20pt;
 }
 
 .questioncontent{
-    color: white;
+    color: black;
     font-size: 16pt;
 }
 
 .questionauthor{
-    color: white;
+    color: black;
     font-size: 12pt;
 }
 
@@ -33,4 +36,8 @@
 .qhelptext{
     color: black;
     font-size: 20pt;
+}
+
+.breakline{
+    background-color: rgba(0, 179, 0, 0.3);
 }
