--- a/templates/main/lecture.html
+++ b/templates/main/lecture.html
@@ -63,10 +63,10 @@ Profile
                         {% endif %}
                      {% endfor %}
 
-                     &nbsp &nbsp Votes: &nbsp
+
                      {% for title, count in upvote_dict.items %}
                         {% if title == question.title %}
-                            <div class="upvotes" id="count-{{ question.id }}">{{ count }}</div><br/>
+                            <div class="upvotes" id="count-{{ question.id }}">Votes: {{ count }}</div><br/>
                         {% endif %}
                      {% endfor %}
                  </div>
@@ -95,29 +95,41 @@ Profile
                     {% endfor %}
                     </div>
                     <div class="col pt-2">
-                    <input class="btn lightgray " type="submit" name="submit" value="Submit Reply" />
+                    <input class="btn btn-secondary " type="submit" name="submit" value="Submit Reply" />
                     </div>
                 </form>
             </div>
-            {% endif %}
-
             <div class="row bg-white rounded pl-5 pt-2 pb-2">
 
             </div>
+            {% endif %}
+            {% if replies %}
+
 <!--            Loop over and add replies-->
-            {% for reply in replies %}
+
             <div class="row lightgray text-dark rounded pl-5 pt-3 pb-3 pr-5 showreplies"
                  id="showreplies-{{ question.id }}"
                      data-questionid="{{ question.id }}">
-                    <div><h5> Answer (Click to view)</h5></div>
-                <div class="hidden replies-{{ question.id }}">{{ reply.reply }}</div><br/>
-            </div>
-             <div class="row bg-white rounded pl-5 pt-2 pb-2">
+                <div class="container">
 
-             </div>
-              {% endfor %}
+                    <div class="row" }><h5 class="answer-{{ question.id }}">Answer (Click to view)</h5></div>
+
+                    {% for reply in replies %}
+                    <div class="row hidden replies-{{ question.id }}"><h6>{{ reply.user}}:</h6></div>
+                    <div class="row hidden replies-{{ question.id }}">{{ reply.reply }}</div>
+                    <div class="row hidden replies-{{ question.id }}"><br></div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="row bg-white text-white rounded pl-5 pt-2 pb-2">
+
+            </div>
+            {% endif %}
+
+
             {% endif %}
         {% endfor %}
+
         <div class="row breakline text-white rounded pl-5 pt-1 ml-5 mr-5">
 
         </div>
@@ -144,7 +156,7 @@ Profile
                 {{ field.help_text }}
                 {{ field }}
             {% endfor %}
-            <input class="btn lightgray" type="submit" name="submit" value="Submit Question" />
+            <input class="btn btn-secondary" type="submit" name="submit" value="Submit Question" />
         </form>
         </div>
     {% endif %}
