--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -104,10 +104,8 @@
 			</div>
 		<div class="row footer-bottom d-flex justify-content-between">
 			<div class="col-lg-4 col-sm-12 footer-social">
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
+				<a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a>
 			</div>
 		</div>
 		</div>
