--- a/templates/main/forum.html
+++ b/templates/main/forum.html
@@ -2,7 +2,6 @@
 
 {% extends 'main/base.html' %}
 {% load staticfiles %}
-<<<<<<< HEAD
 
 <html>
 <head>
@@ -11,16 +10,13 @@
 </head>
 <body>
 
-=======
->>>>>>> c71f8bf65018e0b4cba907b1541a114358cf76ab
 {% block title_block %}
 Profile
 {% endblock %}
 
 {% block body_block %}
 <div class="container">
-<<<<<<< HEAD
-    <div class="row bg-secondary text-white rounded">
+    <div class="row lightgray rounded">
          <div class="pl-5 pt-3">
             <div class="lecturetitle">{{ course.name }} - {{ forum.name }}</div><br/>
          </div>
@@ -37,13 +33,19 @@ Profile
             {% if p == post.title %}
 
 <!--            Add post title-->
-            <div class="row bg-secondary text-white rounded">
-                 <div class="pl-5 pt-3" id="{{ question.id }}">
-                    <div class="posttitle">{{ post.title }} </div>
-                    <div class="postcontent mt-2">{{ post.question }}</div>
+            <div class="row lightgray rounded">
+                <div class="pl-5 pt-3" id="{{ post.id }}">
+                    <div class="questiontitle">{{ post.title }} </div>
+                    <div class="questioncontent mt-2">{{ post.post }}</div>
                      {% if is_tutor == True %}
-                     <div class="postauthor pt-2 pb-4">Posted by: {{post.user}}</div>
+                     <div class="questionauthor pt-2 pb-4">Posted by: {{post.user}}</div>
                      {% endif %}
+                </div>
+            </div>
+
+            <div class="row bg-white rounded pl-5 pt-2 pb-2">
+
+            </div>
 
 <!--            comment form-->
             {% if is_tutor == True %}
@@ -68,36 +70,54 @@ Profile
                     </div>
                 </form>
             </div>
-            {% endif %}
+            <div class="row bg-white rounded pl-5 pt-2 pb-2">
 
+            </div>
+            {% endif %}
+            {% if comments %}
+
+<!--            Loop over and add comments-->
+
+            <div class="row lightgray text-dark rounded pl-5 pt-3 pb-3 pr-5 showreplies"
+                 id="showcomments-{{ post.id }}"
+                     data-questionid="{{ post.id }}">
+                <div class="container">
+
+                    <div class="row" }><h5 class="answer-{{ post.id }}">Comments (Click to view)</h5></div>
+
+                    {% for comment in comments %}
+                    <div class="row hidden replies-{{ post.id }}"><h6>{{ comment.user}}:</h6></div>
+                    <div class="row hidden replies-{{ post.id }}">{{ comment.comment }}</div>
+                    <div class="row hidden replies-{{ post.id }}"><br></div>
+                    {% endfor %}
+                </div>
+            </div>
             <div class="row bg-white text-white rounded pl-5 pt-2 pb-2">
 
             </div>
-<!--            Loop over and add comments-->
-            {% for comment in comments %}
-            <div class="row lightgray text-dark rounded pl-5 pt-3 pb-3 pr-5 showreplies"
-                 id="showcomments-{{ post.id }}"
-                     data-postid="{{ post.id }}">
-                    <div><h5> Answer (Click to view)</h5></div>
-                <div class="hidden comments-{{ post.id }}">{{ comment.comment }}</div><br/>
-            </div>
-             <div class="row bg-white text-white rounded pl-5 pt-2 pb-2">
+            {% endif %}
 
-             </div>
-              {% endfor %}
+
             {% endif %}
         {% endfor %}
+
+        <div class="row breakline text-white rounded pl-5 pt-1 ml-5 mr-5">
+
+        </div>
+        <div class="row bg-white text-white rounded pl-5 pt-2 pb-2">
+
+        </div>
     {% endfor %}
 
 <!--    Submit post form-->
     {% if is_student == True %}
-        <div class="row bg-secondary text-white rounded pl-5 pt-2 pb-2">
+        <div class="row lightgray rounded pl-5 pt-2 pb-2">
             <div class="questiontitle">Submit a post:</div>
         </div>
 
 
         <div class="row lightgray text-dark rounded pl-5 pt-3 pb-3 pr-5">
-        <form id="question_form" method="post" action="/main/course/{{ course.slug }}/{{ post.slug }}/create_post/">
+        <form id="post_form" method="post" action="/main/course/{{ course.slug }}/{{ forum.slug }}/create_post/">
             {% csrf_token %}
             {% for hidden in post_form.hidden_fields %}
                 {{ hidden }}
@@ -128,15 +148,3 @@ Profile
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
-=======
-    <h1>{{ forum.name }}</h1>
-    {% if posts %} 
-    {% for post in posts %} 
-    <ul>
-        <li>{{ post.title }}</li>
-    </ul>
-</div>
-    {% endfor %}
-    {% endif %}
-{% endblock %}
->>>>>>> c71f8bf65018e0b4cba907b1541a114358cf76ab
