--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -52,7 +52,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<a class="navbar-brand logo_h" href="/"><img src="{% static 'images/question.png' %}" alt=""></a>
+				<a class="navbar-brand logo_h" href="{% url 'main:index' %}"><img src="{% static 'images/question.png' %}" alt="Questionable logo"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -89,6 +89,7 @@
 	<!--================ End Body_Block Area  =================-->
 
 	<!--================ Start footer Area  =================-->
+	<br />
 	<footer class="footer-area section_gap">
 		<div class="container">
 			<div class="row">
