--- a/templates/main/course_details.html
+++ b/templates/main/course_details.html
@@ -33,7 +33,7 @@
                     <ul class="course_list">
                         {% if forums %}
                         {% for forum in forums %}
-                        <a href="{% url 'main:forum' course.slug forum.slug %}"><li class="justify-content-between">{{ forum.name }}</li></a>
+                        <a style="color: black;" href="{% url 'main:forum' course.slug forum.slug %}"><li class="justify-content-between">{{ forum.name }}</li></a>
                         {% endfor %}
                         {% endif %}
                     </ul>
@@ -42,7 +42,7 @@
                         <ul class="course_list">
                             {% if lectures %}
                             {% for lecture in lectures%}
-                            <a href="{% url 'main:lecture' course.slug lecture.slug %}"><li class="justify-content-between">{{ lecture.name }}</li></a>
+                            <a style="color: black;"   href="{% url 'main:lecture' course.slug lecture.slug %}"><li class="justify-content-between">{{ lecture.name }}</li></a>
                             {% endfor %}
                             {% endif %}
                         </ul>
