Added alert boxes on error and update pages

--- a/templates/main/error.html
+++ b/templates/main/error.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block body_block%}
 <div class="container">
-        <h3 class="alert alert-success">Password changed sucessfully!</h3> 
+        <h3 class="alert alert-warning">An error has occured, potentially the item you tried to create already exists!</h1> 
         <a href="{% url 'main:index' %}">Return to index</a>
 </div>
 {% endblock %}
