--- a/templates/main/request_sent.html
+++ b/templates/main/request_sent.html
@@ -8,7 +8,7 @@ Sent
 
 {% block body_block %}
 <div class="container">
-    <h3>Request to upgrade to lecturer has been sent!</h3> 
+    <h3 class="alert alert-success">Request to upgrade to lecturer has been sent!</h3> 
     <a href="{% url 'main:index' %}">Return to index</a>
 </div>
 {% endblock %}
