--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -16,7 +16,7 @@
                     <div class="card-body">
     
                         <h6 class="card-title">Logged out</h6>
-                        <p class="card-text">
+                        <p class="card-text alert alert-success">
                             You have successfull logged out.
                         </p>
     
