--- a/templates/main/delete_user.html
+++ b/templates/main/delete_user.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block body_block%}
 <div class="container">
-        <h1>User deleted successfully!</h1> 
+        <h3 class="alert alert-info">User deleted successfully!</h3> 
         <a href="{% url 'main:index' %}">Return to index</a>
 </div>
 {% endblock %}
