--- a/templates/main/contact_page.html
+++ b/templates/main/contact_page.html
@@ -15,6 +15,9 @@ Contact
 		<div class="row">
 			<div class="col-lg-12">
 				<h2 class="title">About Questionable</h2>
+				<div class="content">
+					<p>This is a little something about the questionable app and who we are.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -23,11 +26,32 @@ Contact
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-6">
-
+			<div class="col-lg-3">
+				<div class="card" style="width: 18rem;">
+					<img src="../media/images/default.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">CEO</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				  </div>
 			</div>
-			<div class="col-lg-6">
-				
+			<div class="col-lg-3">
+				<div class="card" style="width: 18rem;">
+					<img src="../media/images/default.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">CTO</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				  </div>
+			</div>
+			<div class="col-lg-3">
+				<div class="card" style="width: 18rem;">
+					<img src="../media/images/default.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Lead Developer</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				  </div>
 			</div>
 		</div>
 	</div>
