tweaks to the contact page

--- a/templates/main/contact_page.html
+++ b/templates/main/contact_page.html
@@ -11,17 +11,19 @@ Contact
 
 	{% block body_block%}
 
-	<div class="container">
+	<div class="container course_details_area">
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12 course_details_left">
 				<h2 class="title">About Questionable</h2>
 				<div class="content">
-					<p>This is a little something about the questionable app and who we are.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et felis vulputate, dapibus leo et, faucibus odio. Aenean vel molestie metus. Donec sagittis lacus consequat accumsan tincidunt. Sed sollicitudin dapibus urna, non pharetra risus consequat et. Vestibulum eu pretium leo, feugiat imperdiet elit. Mauris ut bibendum lacus, vitae elementum diam. Pellentesque et elit felis. Duis vestibulum, diam at venenatis blandit, risus turpis ornare dolor, non lacinia tellus erat ac nibh. Fusce vel sem nec magna congue volutpat. Aliquam mattis ligula vitae rutrum sodales. Ut at tempor justo. In aliquet sed sem ac interdum. Cras feugiat dolor id lacinia efficitur.</p>
+
+						<p>Suspendisse id quam a nisl aliquet dapibus. Nullam sit amet nisl non turpis lacinia venenatis vel vitae quam. Quisque hendrerit rhoncus ex, eget tempor massa commodo sed. Suspendisse at sodales nisl. Fusce laoreet orci eget metus congue, ut mollis diam finibus. Etiam fermentum ipsum in aliquet varius. Duis quis fermentum elit. Praesent tempor turpis laoreet, faucibus lorem vel, semper mauris. Mauris non magna rhoncus, venenatis enim ut, maximus mi. Etiam scelerisque pharetra sapien, eget venenatis diam feugiat nec. Cras varius vel metus vel lobortis. Suspendisse vel feugiat odio. Praesent interdum lorem sed erat blandit feugiat. Sed urna leo, facilisis nec efficitur non, mattis ac lorem. Proin sit amet turpis in dui vulputate finibus suscipit nec sem. Vivamus porttitor lacinia nisl, quis tempus massa vulputate sit amet.</p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12 course_details_left"">
 				<h2 class="title">Contact Us</h2>
 			</div>
 		</div>
@@ -49,6 +51,15 @@ Contact
 					<img src="../media/images/default.jpg" class="card-img-top" alt="...">
 					<div class="card-body">
 					  <h5 class="card-title">Lead Developer</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				  </div>
+			</div>
+			<div class="col-lg-3">
+				<div class="card" style="width: 18rem;">
+					<img src="../media/images/default.jpg" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Lead Designer</h5>
 					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				  </div>
