--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -42,7 +42,7 @@
 						{% if user.is_authenticated %}
 						<a href="{% url 'main:profile' %}" class="text-uppercase">Welcome, {{ user.username }}</a> <a href="{% url 'auth_logout' %}" class="text-uppercase">Logout</a>
 						{% else %}
-						<a href="{% url 'auth_login' %}" class="text-uppercase">Login</a>
+						<a href="{% url 'auth_login' %}" class="text-uppercase">Login / Register</a>
 						{% endif %}
 					</div>
 				</div>
