--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -63,7 +63,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu_nav ml-auto">
-						<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'main:index' %}">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="{% url 'main:contact_page' %}">About</a></li>
 						<li class="nav-item"><a class="nav-link" href="{% url 'main:courses' %}">Courses</a></li>
 						</a>
