--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -66,7 +66,16 @@
 						<li class="nav-item"><a class="nav-link" href="{% url 'main:index' %}">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="{% url 'main:contact_page' %}">About</a></li>
 						<li class="nav-item"><a class="nav-link" href="{% url 'main:courses' %}">Courses</a></li>
-						</a>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
+							<div class="dropdown-menu">
+								{% if user.is_authenticated %}
+								<a class="dropdown-item" href="{% url 'main:profile' %}">Profile</a>
+								<a class="dropdown-item" href="{% url 'auth_logout' %}">Logout</a>
+								{% else %}
+								<a class="dropdown-item" href="{% url 'auth_login' %}">Login</a>
+								{% endif %}
+							</div>
 						</li>
 					</ul>
 				</div>
