Comments selected and displayed by ID to allow comments of same title

--- a/templates/main/forum.html
+++ b/templates/main/forum.html
@@ -30,7 +30,7 @@ Profile
         {% for p, comments in comment_dict.items %}
 
 <!--            only select comments for current post-->
-            {% if p == post.title %}
+            {% if p == post.id %}
 
 <!--            Add post title-->
             <div class="row lightgray rounded">
